show/hide socialization and certifications

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -23,6 +23,8 @@ showPublications = true
 showQr = true
 showSkills = true
 coloredSkills = true
+showCertifications = false
+showSocialization = true
 
 [params.google]
 
